<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_theme"
        android:orderInCategory="100"
        android:title="@string/nav_theme"
        app:showAsAction="never"
        android:tint="#FFFFFF"/>
    <item
        android:id="@+id/action_equ"
        android:icon="@drawable/ic_assessment_black_24dp"
        app:showAsAction="never"
        android:title="@string/equalizer" />

    <item
        android:id="@+id/action_sleep_timer"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/nav_sleep_timer"
        app:showAsAction="never"
        android:tint="#FFFFFF"/>

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_menu_search"
        android:title="@string/search"
        android:visible="false"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
</menu>