<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#e1e1e1"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#191919">

        <ImageView
            android:id="@+id/img_song_thumb"
            android:layout_width="@dimen/avatar_image_size"
            android:layout_height="@dimen/avatar_image_size"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/default_margin"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/default_song_cover" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_toEndOf="@id/img_song_thumb"
            android:layout_toRightOf="@id/img_song_thumb"
            android:orientation="vertical">

            <TextView
                android:id="@+id/song_name"
                style="@style/PrimaryTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FE720C"
                android:textSize="18sp"
                tools:text="Tháng tư là lời nói dối của em" />

            <TextView
                android:id="@+id/song_artist_and_duration"
                style="@style/SecondaryTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="#757572"
                android:textSize="16sp"
                tools:text="Hà Anh Tuấn" />
        </LinearLayout>
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:background="@drawable/bg_dialog"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/action_add_to_queue"
                style="@style/DialogSongPopupItem"
                android:drawableLeft="@drawable/song_popup_add_to_queue"
                android:drawableStart="@drawable/song_popup_add_to_queue"
                android:text="@string/add_to_queue" />

            <TextView
                android:id="@+id/action_remove_from_queue"
                style="@style/DialogSongPopupItem"
                android:drawableLeft="@drawable/song_popup_remove_from_queue"
                android:drawableStart="@drawable/song_popup_remove_from_queue"
                android:text="@string/remove_from_queue" />

            <TextView
                android:id="@+id/action_add_to_playlist"
                style="@style/DialogSongPopupItem"
                android:drawableLeft="@drawable/song_popup_add_to_playlist"
                android:drawableStart="@drawable/song_popup_add_to_playlist"
                android:text="@string/add_to_playlist" />

            <TextView
                android:id="@+id/action_remove_from_playlist"
                style="@style/DialogSongPopupItem"
                android:drawableLeft="@drawable/song_popup_remove_from_playlist"
                android:drawableStart="@drawable/song_popup_remove_from_playlist"
                android:text="@string/remove_from_playlist" />

            <TextView
                android:id="@+id/action_add_to_favorites"
                style="@style/DialogSongPopupItem"
                android:drawableLeft="@drawable/song_popup_add_to_favorites"
                android:drawableStart="@drawable/song_popup_add_to_favorites"
                android:text="@string/add_to_favorites" />

            <TextView
                android:id="@+id/action_remove_from_favorites"
                style="@style/DialogSongPopupItem"
                android:drawableLeft="@drawable/song_popup_remove_from_favorites"
                android:drawableStart="@drawable/song_popup_remove_from_favorites"
                android:text="@string/remove_from_favorites" />

            <TextView
                android:id="@+id/action_set_ringtone"
                style="@style/DialogSongPopupItem"
                android:drawableLeft="@drawable/song_popup_ringtone"
                android:drawableStart="@drawable/song_popup_ringtone"
                android:text="@string/set_ringtone" />

            <TextView
                android:id="@+id/action_delete"
                style="@style/DialogSongPopupItem"
                android:drawableLeft="@drawable/song_popup_delete"
                android:drawableStart="@drawable/song_popup_delete"
                android:text="@string/delete" />

            <TextView
                android:id="@+id/action_details"
                style="@style/DialogSongPopupItem"
                android:drawableLeft="@drawable/song_popup_details"
                android:drawableStart="@drawable/song_popup_details"
                android:text="@string/details" />

            <TextView
                android:id="@+id/action_share"
                style="@style/DialogSongPopupItem"
                android:drawableLeft="@drawable/song_popup_share"
                android:drawableStart="@drawable/song_popup_share"
                android:text="@string/share" />

            <TextView
                android:id="@+id/action_edit_tag"
                style="@style/DialogSongPopupItem"
                android:drawableLeft="@drawable/tag_edit"
                android:drawableStart="@drawable/tag_edit"
                android:visibility="invisible"
                android:text="@string/tag_edit" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>