<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/nav_header"
            android:layout_width="match_parent"
            android:layout_height="224dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/rock_img" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            app:cardBackgroundColor="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nav_songs"
                    style="@style/NavMenuItem"
                    android:layout_marginTop="@dimen/small_margin"
                    android:drawableLeft="@drawable/nav_song"
                    android:drawableStart="@drawable/nav_song"
                    android:text="@string/songs" />
                <TextView
                    android:id="@+id/nav_playlist"
                    style="@style/NavMenuItem"
                    android:drawableLeft="@drawable/nav_playlist"
                    android:drawableStart="@drawable/nav_playlist"
                    android:text="@string/playlist" />

                <TextView
                    android:id="@+id/nav_folders"
                    style="@style/NavMenuItem"
                    android:drawableLeft="@drawable/nav_folder"
                    android:drawableStart="@drawable/nav_folder"
                    android:text="@string/folders" />

                <TextView
                    android:id="@+id/nav_albums"
                    style="@style/NavMenuItem"
                    android:drawableLeft="@drawable/nav_album"
                    android:drawableStart="@drawable/nav_album"
                    android:text="@string/albums" />

                <TextView
                    android:id="@+id/nav_artists"
                    style="@style/NavMenuItem"
                    android:drawableLeft="@drawable/nav_artist"
                    android:drawableStart="@drawable/nav_artist"
                    android:text="@string/artists" />

                <TextView
                    android:id="@+id/nav_equalizer"
                    style="@style/NavMenuItem"
                    android:drawableLeft="@drawable/nav_equalizer"
                    android:drawableStart="@drawable/nav_equalizer"
                    android:text="@string/equalizer" />
                <RelativeLayout
                    android:id="@+id/nav_timer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:background="?selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true">

                    <TextView
                        android:id="@+id/tv_time_remaining"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/default_margin"
                        android:layout_marginRight="@dimen/default_margin"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:maxWidth="60dp"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp"
                        android:visibility="gone"
                        tools:text="60'"
                        tools:visibility="visible" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginBottom="@dimen/small_margin"
                        android:layout_marginLeft="@dimen/default_margin"
                        android:layout_marginRight="@dimen/default_margin"
                        android:layout_marginTop="@dimen/small_margin"
                        android:layout_toLeftOf="@id/tv_time_remaining"
                        android:layout_toStartOf="@id/tv_time_remaining"
                        android:drawableLeft="@drawable/nav_alarm"
                        android:drawablePadding="@dimen/default_margin"
                        android:drawableStart="@drawable/nav_alarm"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:text="@string/timer"
                        android:textColor="#575757"
                        android:textSize="16sp" />
                </RelativeLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginRight="@dimen/small_margin"
            app:cardBackgroundColor="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_margin"
                    android:layout_marginRight="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/information"
                    android:textColor="#575757"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/nav_privacy_policy"
                    style="@style/NavMenuItem"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:layout_marginTop="@dimen/small_margin"
                    android:drawableLeft="@drawable/nav_lock"
                    android:drawableStart="@drawable/nav_lock"
                    android:text="@string/privacy_policy" />

                <TextView
                    android:id="@+id/nav_rate_app"
                    style="@style/NavMenuItem"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:drawableLeft="@drawable/nav_star"
                    android:drawableStart="@drawable/nav_star"
                    android:text="@string/rate_app" />

                <TextView
                    android:id="@+id/nav_more_apps"
                    style="@style/NavMenuItem"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:drawableLeft="@drawable/nav_gift"
                    android:drawableStart="@drawable/nav_gift"
                    android:text="@string/more_apps" />

                <TextView
                    android:id="@+id/nav_share_app"
                    style="@style/NavMenuItem"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:drawableLeft="@drawable/nav_share"
                    android:drawableStart="@drawable/nav_share"
                    android:text="@string/share_app" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>