<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300sp"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
       android:text="@string/ringtone_type_label"
       android:textColor="#ffffffff"
       android:textSize="12sp"
       android:layout_marginLeft="15dip"
       android:layout_width="wrap_content" 
       android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="15dip" />

    <Spinner android:id="@+id/ringtone_type"
       android:layout_marginLeft="10dip"
        android:layout_marginBottom="5dp"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
        android:layout_marginStart="10dip" />

    <!--<TextView
       android:text="@string/ringtone_name_label"
       android:textColor="#ffffffff"
       android:textSize="12sp"
       android:layout_marginLeft="15dip"
       android:layout_width="wrap_content" 
       android:layout_height="wrap_content"
        android:layout_marginStart="15dip" />-->

    <EditText android:id="@+id/filename"
       android:inputType="text"
       android:layout_marginLeft="10dip"
        android:layout_marginBottom="5dp"
       android:layout_width="280sp" 
       android:layout_height="wrap_content"
        android:layout_marginStart="10dip"
        tools:ignore="LabelFor" />

    <LinearLayout
       android:layout_marginTop="5dip"
       android:layout_marginLeft="10dip"
       android:layout_width="fill_parent" 
       android:layout_height="wrap_content"
       android:gravity="center_horizontal"
        android:layout_marginStart="10dip">

      <Button android:id="@+id/save"
         android:text="@string/file_save_button_save"
         android:layout_width="100sp" 
         android:layout_height="wrap_content" />

      <Button android:id="@+id/cancel"
         android:text="@string/file_save_button_cancel"
         android:layout_width="100sp" 
         android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>
